# trackingAlgorithm

./: .gitignore  CMakeLists.txt  COPYING.txt  Makefile  README.md  make.pro
OpenNI-Linux-x64-2.2/: OpenNIDevEnvironment
OpenNI-Linux-x64-2.2/Documentation/: _conventions_8txt.html  _getting_started_8txt.html  _main_page_8txt.html  _n_o_t_i_c_e_8txt.html  _oni_enums_8h.html  _oni_enums_8h_source.html  _open_n_i_8h.html  _open_n_i_8h_source.html  _release_notes_8txt_8txt.html  annotated.html  classes.html  classopenni_1_1_array-members.html  classopenni_1_1_array.html  classopenni_1_1_camera_settings-members.html  classopenni_1_1_camera_settings.html  classopenni_1_1_coordinate_converter-members.html  classopenni_1_1_coordinate_converter.html  classopenni_1_1_device-members.html  classopenni_1_1_device.html  classopenni_1_1_device_info-members.html  classopenni_1_1_device_info.html  classopenni_1_1_open_n_i-members.html  classopenni_1_1_open_n_i.html  classopenni_1_1_open_n_i_1_1_device_connected_listener-members.html  classopenni_1_1_open_n_i_1_1_device_connected_listener.html  classopenni_1_1_open_n_i_1_1_device_disconnected_listener-members.html  classopenni_1_1_open_n_i_1_1_device_disconnected_listener.html  classopenni_1_1_open_n_i_1_1_device_state_changed_listener-members.html  classopenni_1_1_open_n_i_1_1_device_state_changed_listener.html  classopenni_1_1_playback_control-members.html  classopenni_1_1_playback_control.html  classopenni_1_1_recorder-members.html  classopenni_1_1_recorder.html  classopenni_1_1_sensor_info-members.html  classopenni_1_1_sensor_info.html  classopenni_1_1_video_frame_ref-members.html  classopenni_1_1_video_frame_ref.html  classopenni_1_1_video_mode-members.html  classopenni_1_1_video_mode.html  classopenni_1_1_video_stream-members.html  (+31 more)
OpenNI-Linux-x64-2.2/Documentation/java/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-tree.html
OpenNI-Linux-x64-2.2/Documentation/java/org/openni/: CoordinateConverter.html  CropArea.html  Device.html  DeviceInfo.html  ImageRegistrationMode.html  OpenNI.DeviceConnectedListener.html  OpenNI.DeviceDisconnectedListener.html  OpenNI.DeviceStateChangedListener.html  OpenNI.html  PixelFormat.html  PlaybackControl.html  Point2D.html  Point3D.html  Recorder.html  SensorInfo.html  SensorType.html  Version.html  VideoFrameRef.html  VideoMode.html  VideoStream.CameraSettings.html  VideoStream.NewFrameListener.html  VideoStream.html  package-frame.html  package-summary.html  package-tree.html
OpenNI-Linux-x64-2.2/Tools/: NiViewer  PS1080Console  PSLinkConsole
RealPDT/: AncillaryMethods.cpp  AncillaryMethods.h  CMakeLists.txt  Detections.cpp  Detections.h  Doxyfile  EKalman.cpp  EKalman.h  Globals.cpp  Globals.h  Grabber.cpp  Grabber.h  Hypo.cpp  Hypo.h  MDL.cpp  MDL.h  Makefile  Matrix.h  ROI.cpp  ROI.h  RealPDT.pro  Tracker.cpp  Tracker.h  Visualization.cpp  Visualization.h  Volume.h  depthdetector.cpp  depthdetector.h  depthdetector_lm.cpp  depthdetector_lm.h  depthdetector_lm_seg.cpp  depthdetector_lm_seg.h  depthdetector_seg.cpp  depthdetector_seg.h  detectiontrackingsystem.cpp  detectiontrackingsystem.h  detector.cpp  detector.h  detector_seg.cpp  detector_seg.h  (+9 more)
RealPDT/Streaming/: StreamingApp.cpp  StreamingApp.h  setup_streamer.txt
RealPDT/camera/: Camera.cpp
RealPDT/doc/: .gitignore
RealPDT/fovis/: depth_image.cpp
RealPDT/math/: Math.h
RealPDT/segmentation_roi/: CFilter.h  ROI_SEG.cpp  ROI_SEG.h  SegmentationROI.cpp  SegmentationROI.h  SegmentedObj.cpp  SegmentedObj.h
cmake/: FindOpenNI2.cmake
cudaHOG/: CMakeLists.txt  Makefile  blocks.cu  blocks.h  conversions.cu  conversions.h  cudaHOG.cpp  cudaHOG.h  descriptor.cu  descriptor.h  detections.cu  detections.h  global.h  gradients.cu  gradients.h  hog.cu  hog.h  nms.cu  nms.h  padding.cu  padding.h  parameters.cpp  parameters.h  persondetectorwt.tcc  roi.h  svm.cu  svm.h  timer.cu  timer.h
cudaHOG/ext/: Matrix.h  Vector.h
